card text overflow issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 0px;
 }
 
 /* Track */
@@ -60,7 +60,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: red;
+  background: rgb(255, 0, 0);
   border-radius: 0px;
 }
 
@@ -88,6 +88,17 @@ input[type=text], [type=tel], input[type=textarea] {
   width: 90%;
   padding: 12px;
   margin: 2px 1px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  margin-top: 10px;
+  margin-left: 18px;
+}
+
+.text_area {
+  width: 90%;
+  padding: 12px;
+  margin: 3px 1px;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
